# KBFreshness

./: .env.example  .gitignore  Cargo.toml  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  docker-compose.yml
.codex/: codex-os.manifest.json  verify.commands
.github/workflows/: git-hygiene.yml  perf-enforced.yml  perf-foundation.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ArticleTable.tsx  HealthBadge.tsx  LinkCheckResults.tsx  ReviewDialog.tsx  ScanStatus.tsx  ScreenshotTimeline.tsx  TicketPatterns.tsx
frontend/src/pages/: ArticlePage.tsx  Dashboard.tsx
frontend/src/types/: index.ts
frontend/src/utils/: dates.ts
migrations/: 20260214000001_initial_schema.sql  20260214000002_fix_article_unique_constraint.sql  20260214000002_seed_dev_data.sql  20260214000003_add_freshness_threshold_default.sql
scripts/: clean-all.sh  clean-heavy.sh  clean.sh  dev-lean.sh  seed_dev_data.sql
src/: config.rs  error.rs  health.rs  lib.rs  main.rs  security.rs  sqlx_compat.rs
src/api/: articles.rs  health.rs  mod.rs  scans.rs  screenshots.rs
src/db/: articles.rs  link_checks.rs  mod.rs  scan_runs.rs  screenshots.rs  ticket_patterns.rs
src/jobs/: freshness_scan.rs  link_checker.rs  mod.rs  screenshot_capture.rs  screenshot_cleanup.rs  ticket_analyzer.rs
src/sources/: confluence.rs  mod.rs
