[package]
name = "kb-freshness-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.21"
tokio-cron-scheduler = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# Phase 3
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], optional = true }
futures = { version = "0.3", optional = true }
img_hash = { version = "3", optional = true }

# Phase 4
strsim = { version = "0.11", optional = true }
urlencoding = "2"

[dev-dependencies]
axum-test = "16"
wiremock = "0.6"

[features]
default = []
screenshots = ["chromiumoxide", "futures", "img_hash"]
tickets = ["strsim"]
